fix(opportunities): left align icons

--- a/src/components/content-graphic/content-graphic.scss
+++ b/src/components/content-graphic/content-graphic.scss
@@ -110,6 +110,8 @@
   }
 
   .left-align {
+    text-align: left !important;
+
     h3,
     p,
     li {
